@@ -1,6 +1,6 @@
 // Boilerplate support routines for -*- C++ -*- dynamic memory management.
 
-// Copyright (C) 1997, 1998, 1999, 2000 Free Software Foundation
+// Copyright (C) 1997, 1998, 1999, 2000, 2004 Free Software Foundation
 //
 // This file is part of GCC.
 //
@@ -30,6 +30,7 @@
 
 #include "new"
 #include <cstdlib>
+#include <bits/c++config.h>
 
 #if _GLIBCXX_HOSTED
 using std::free;
