@@ -1,6 +1,6 @@
 // Boilerplate support routines for -*- C++ -*- dynamic memory management.
 
-// Copyright (C) 1997, 1998, 1999, 2000 Free Software Foundation
+// Copyright (C) 1997, 1998, 1999, 2000, 2004 Free Software Foundation
 //
 // This file is part of GCC.
 //
@@ -29,6 +29,7 @@
 // the GNU General Public License.
 
 #include "new"
+#include <bits/c++config.h>
 
 _GLIBCXX_WEAK_DEFINITION void
 operator delete[] (void *ptr) throw ()
