@@ -1,5 +1,7 @@
 // Support routines for the -*- C++ -*- dynamic memory management.
-// Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002 Free Software Foundation
+
+// Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2004
+// Free Software Foundation
 //
 // This file is part of GCC.
 //
@@ -30,6 +32,7 @@
 #include "new"
 #include <cstdlib>
 #include <exception_defines.h>
+#include <bits/c++config.h>
 
 using std::new_handler;
 using std::bad_alloc;
