@@ -1,3 +1,15 @@
+2004-11-03  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/bits/c++config: Spacing.
+	* libsupc++/del_op.cc: Include c++config.h.
+	* libsupc++/del_opnt.cc: Same.
+	* libsupc++/del_opv.cc: Same.
+	* libsupc++/del_opvnt.cc: Same.
+	* libsupc++/new_op.cc: Same.
+	* libsupc++/new_opnt.cc: Same.
+	* libsupc++/new_opv.cc: Same.
+	* libsupc++/new_opvnt.cc: Same.
+
 2004-11-03  Aaron W. LaFramboise  <aaronavay62@aaronwl.com>
 
 	* config/os/bsd/darwin/os_defines.h
